// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI/Tooltip darkMode:false 1`] = `
<div>
  <Component>
    <MemoryRouter
      initialEntries={
        Array [
          Object {
            "key": "home",
            "pathname": "/",
          },
        ]
      }
    >
      <Router
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": "home",
                "pathname": "/",
                "search": "",
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "home",
              "pathname": "/",
              "search": "",
            },
            "push": [Function],
            "replace": [Function],
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "padding": "64px",
              "width": "100%",
            }
          }
        >
          <Tooltip
            as="span"
            className=""
            containerRef={null}
            darkMode={false}
            title="View job #100"
          >
            <ForwardRef(Role)
              as="span"
              className="root"
              state={
                Object {
                  "anchorRect": null,
                  "anchorRef": Object {
                    "current": <span
                      aria-labelledby="id-oenpwn"
                      class="root"
                      tabindex="0"
                    >
                      Job #100
                    </span>,
                  },
                  "animated": false,
                  "animating": false,
                  "arrowPadding": 4,
                  "arrowRef": Object {
                    "current": <div
                      aria-hidden="true"
                      class="arrow"
                      style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            fill="none"
                          />
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            stroke="none"
                          />
                        </g>
                      </svg>
                    </div>,
                  },
                  "contentElement": <div
                    class="tooltip"
                    hidden=""
                    id="id-oenpwn"
                    role="tooltip"
                    style="display: none;"
                  >
                    <div
                      aria-hidden="true"
                      class="arrow"
                      style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            fill="none"
                          />
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            stroke="none"
                          />
                        </g>
                      </svg>
                    </div>
                    View job #100
                  </div>,
                  "currentPlacement": "top",
                  "disclosureRef": Object {
                    "current": null,
                  },
                  "fixed": false,
                  "flip": true,
                  "gutter": 8,
                  "hide": [Function],
                  "mounted": false,
                  "padding": 8,
                  "placement": "top",
                  "popoverRef": Object {
                    "current": <div
                      role="presentation"
                      style="position: absolute; left: 0px; top: 0px; margin: 0px;"
                    >
                      <div
                        class="tooltip"
                        hidden=""
                        id="id-oenpwn"
                        role="tooltip"
                        style="display: none;"
                      >
                        <div
                          aria-hidden="true"
                          class="arrow"
                          style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                        >
                          <svg
                            display="block"
                            viewBox="0 0 30 30"
                          >
                            <g
                              transform="rotate(180 15 15)"
                            >
                              <path
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                fill="none"
                              />
                              <path
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                stroke="none"
                              />
                            </g>
                          </svg>
                        </div>
                        View job #100
                      </div>
                    </div>,
                  },
                  "preventOverflow": true,
                  "render": [Function],
                  "renderCallback": undefined,
                  "sameWidth": false,
                  "setAnchorRect": [Function],
                  "setContentElement": [Function],
                  "setVisible": [Function],
                  "shift": 0,
                  "show": [Function],
                  "stopAnimation": [Function],
                  "timeout": 0,
                  "toggle": [Function],
                  "visible": false,
                }
              }
            >
              <span
                aria-labelledby="id-oenpwn"
                className="root"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
              >
                Job #100
              </span>
            </ForwardRef(Role)>
            <ForwardRef(Role)
              className="tooltip"
              state={
                Object {
                  "anchorRect": null,
                  "anchorRef": Object {
                    "current": <span
                      aria-labelledby="id-oenpwn"
                      class="root"
                      tabindex="0"
                    >
                      Job #100
                    </span>,
                  },
                  "animated": false,
                  "animating": false,
                  "arrowPadding": 4,
                  "arrowRef": Object {
                    "current": <div
                      aria-hidden="true"
                      class="arrow"
                      style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            fill="none"
                          />
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            stroke="none"
                          />
                        </g>
                      </svg>
                    </div>,
                  },
                  "contentElement": <div
                    class="tooltip"
                    hidden=""
                    id="id-oenpwn"
                    role="tooltip"
                    style="display: none;"
                  >
                    <div
                      aria-hidden="true"
                      class="arrow"
                      style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            fill="none"
                          />
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            stroke="none"
                          />
                        </g>
                      </svg>
                    </div>
                    View job #100
                  </div>,
                  "currentPlacement": "top",
                  "disclosureRef": Object {
                    "current": null,
                  },
                  "fixed": false,
                  "flip": true,
                  "gutter": 8,
                  "hide": [Function],
                  "mounted": false,
                  "padding": 8,
                  "placement": "top",
                  "popoverRef": Object {
                    "current": <div
                      role="presentation"
                      style="position: absolute; left: 0px; top: 0px; margin: 0px;"
                    >
                      <div
                        class="tooltip"
                        hidden=""
                        id="id-oenpwn"
                        role="tooltip"
                        style="display: none;"
                      >
                        <div
                          aria-hidden="true"
                          class="arrow"
                          style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                        >
                          <svg
                            display="block"
                            viewBox="0 0 30 30"
                          >
                            <g
                              transform="rotate(180 15 15)"
                            >
                              <path
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                fill="none"
                              />
                              <path
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                stroke="none"
                              />
                            </g>
                          </svg>
                        </div>
                        View job #100
                      </div>
                    </div>,
                  },
                  "preventOverflow": true,
                  "render": [Function],
                  "renderCallback": undefined,
                  "sameWidth": false,
                  "setAnchorRect": [Function],
                  "setContentElement": [Function],
                  "setVisible": [Function],
                  "shift": 0,
                  "show": [Function],
                  "stopAnimation": [Function],
                  "timeout": 0,
                  "toggle": [Function],
                  "visible": false,
                }
              }
            >
              <Portal
                containerInfo={
                  <div
                    id="id-l4jutx"
                  >
                    <div
                      role="presentation"
                      style="position: absolute; left: 0px; top: 0px; margin: 0px;"
                    >
                      <div
                        class="tooltip"
                        hidden=""
                        id="id-oenpwn"
                        role="tooltip"
                        style="display: none;"
                      >
                        <div
                          aria-hidden="true"
                          class="arrow"
                          style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                        >
                          <svg
                            display="block"
                            viewBox="0 0 30 30"
                          >
                            <g
                              transform="rotate(180 15 15)"
                            >
                              <path
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                fill="none"
                              />
                              <path
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                stroke="none"
                              />
                            </g>
                          </svg>
                        </div>
                        View job #100
                      </div>
                    </div>
                  </div>
                }
              >
                <div
                  role="presentation"
                  style={
                    Object {
                      "position": "fixed",
                    }
                  }
                >
                  <div
                    className="tooltip"
                    hidden={true}
                    id="id-oenpwn"
                    onAnimationEnd={[Function]}
                    onTransitionEnd={[Function]}
                    role="tooltip"
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                  >
                    <ForwardRef(Role)
                      className="arrow"
                      size={12}
                      state={
                        Object {
                          "anchorRect": null,
                          "anchorRef": Object {
                            "current": <span
                              aria-labelledby="id-oenpwn"
                              class="root"
                              tabindex="0"
                            >
                              Job #100
                            </span>,
                          },
                          "animated": false,
                          "animating": false,
                          "arrowPadding": 4,
                          "arrowRef": Object {
                            "current": <div
                              aria-hidden="true"
                              class="arrow"
                              style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                            >
                              <svg
                                display="block"
                                viewBox="0 0 30 30"
                              >
                                <g
                                  transform="rotate(180 15 15)"
                                >
                                  <path
                                    d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                    fill="none"
                                  />
                                  <path
                                    d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                    stroke="none"
                                  />
                                </g>
                              </svg>
                            </div>,
                          },
                          "contentElement": <div
                            class="tooltip"
                            hidden=""
                            id="id-oenpwn"
                            role="tooltip"
                            style="display: none;"
                          >
                            <div
                              aria-hidden="true"
                              class="arrow"
                              style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                            >
                              <svg
                                display="block"
                                viewBox="0 0 30 30"
                              >
                                <g
                                  transform="rotate(180 15 15)"
                                >
                                  <path
                                    d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                    fill="none"
                                  />
                                  <path
                                    d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                    stroke="none"
                                  />
                                </g>
                              </svg>
                            </div>
                            View job #100
                          </div>,
                          "currentPlacement": "top",
                          "disclosureRef": Object {
                            "current": null,
                          },
                          "fixed": false,
                          "flip": true,
                          "gutter": 8,
                          "hide": [Function],
                          "mounted": false,
                          "padding": 8,
                          "placement": "top",
                          "popoverRef": Object {
                            "current": <div
                              role="presentation"
                              style="position: absolute; left: 0px; top: 0px; margin: 0px;"
                            >
                              <div
                                class="tooltip"
                                hidden=""
                                id="id-oenpwn"
                                role="tooltip"
                                style="display: none;"
                              >
                                <div
                                  aria-hidden="true"
                                  class="arrow"
                                  style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                                >
                                  <svg
                                    display="block"
                                    viewBox="0 0 30 30"
                                  >
                                    <g
                                      transform="rotate(180 15 15)"
                                    >
                                      <path
                                        d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                        fill="none"
                                      />
                                      <path
                                        d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                        stroke="none"
                                      />
                                    </g>
                                  </svg>
                                </div>
                                View job #100
                              </div>
                            </div>,
                          },
                          "preventOverflow": true,
                          "render": [Function],
                          "renderCallback": undefined,
                          "sameWidth": false,
                          "setAnchorRect": [Function],
                          "setContentElement": [Function],
                          "setVisible": [Function],
                          "shift": 0,
                          "show": [Function],
                          "stopAnimation": [Function],
                          "timeout": 0,
                          "toggle": [Function],
                          "visible": false,
                        }
                      }
                    >
                      <div
                        aria-hidden={true}
                        className="arrow"
                        style={
                          Object {
                            "fill": "none",
                            "fontSize": 12,
                            "height": "1em",
                            "pointerEvents": "none",
                            "position": "absolute",
                            "stroke": "none",
                            "strokeWidth": 0,
                            "width": "1em",
                          }
                        }
                      >
                        <svg
                          display="block"
                          viewBox="0 0 30 30"
                        >
                          <g
                            transform="rotate(180 15 15)"
                          >
                            <path
                              d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                              fill="none"
                            />
                            <path
                              d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                              stroke="none"
                            />
                          </g>
                        </svg>
                      </div>
                    </ForwardRef(Role)>
                    View job #100
                  </div>
                </div>
              </Portal>
            </ForwardRef(Role)>
          </Tooltip>
        </div>
      </Router>
    </MemoryRouter>
  </Component>
  <IconSprite
    height="16"
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
    width="16"
  >
    <svg
      height="16"
      style={
        Object {
          "height": 0,
          "position": "absolute",
          "width": 0,
        }
      }
      width="16"
    >
      <symbol
        className="feather feather-arrow-down"
        fill="none"
        id="arrow"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 5v14M19 12l-7 7-7-7"
        />
      </symbol>
      <symbol
        className="feather feather-arrow-right-circle"
        fill="none"
        id="arrow-right-circle"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16l4-4-4-4M8 12h8"
        />
      </symbol>
      <symbol
        className="feather feather-x-circle"
        fill="none"
        id="cancel"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M15 9l-6 6M9 9l6 6"
        />
      </symbol>
      <symbol
        className="feather feather-clock"
        fill="none"
        id="clock"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 6v6l4 2"
        />
      </symbol>
      <symbol
        className="feather feather-x-circle"
        fill="none"
        id="close"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M15 9l-6 6M9 9l6 6"
        />
      </symbol>
      <symbol
        className="feather feather-git-commit"
        fill="none"
        id="commit"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="4"
        />
        <path
          d="M1.05 12H7M17.01 12h5.95"
        />
      </symbol>
      <symbol
        className="feather feather-bar-chart"
        fill="none"
        id="filter"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 20V10M18 20V4M6 20v-4"
        />
      </symbol>
      <symbol
        className="feather feather-help-circle"
        fill="none"
        id="help"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3M12 17h.01"
        />
      </symbol>
      <symbol
        className="feather feather-menu"
        fill="none"
        id="menu"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12h18M3 6h18M3 18h18"
        />
      </symbol>
      <symbol
        fill="currentColor"
        id="sort"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 18h6v-2H3v2zM3 6v2h18V6H3zm0 7h12v-2H3v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </symbol>
      <symbol
        className="feather feather-alert-triangle"
        fill="none"
        id="warning"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 001.71 3h16.94a2 2 0 001.71-3L13.71 3.86a2 2 0 00-3.42 0zM12 9v4M12 17h.01"
        />
      </symbol>
    </svg>
  </IconSprite>
</div>
`;

exports[`Storyshots UI/Tooltip default 1`] = `
<div>
  <Component>
    <MemoryRouter
      initialEntries={
        Array [
          Object {
            "key": "home",
            "pathname": "/",
          },
        ]
      }
    >
      <Router
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": "home",
                "pathname": "/",
                "search": "",
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "home",
              "pathname": "/",
              "search": "",
            },
            "push": [Function],
            "replace": [Function],
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "padding": "64px",
              "width": "100%",
            }
          }
        >
          <Tooltip
            as="span"
            className=""
            containerRef={null}
            darkMode={true}
            title="View job #100"
          >
            <ForwardRef(Role)
              as="span"
              className="root"
              state={
                Object {
                  "anchorRect": null,
                  "anchorRef": Object {
                    "current": <span
                      aria-labelledby="id-n14qbt"
                      class="root"
                      tabindex="0"
                    >
                      Job #100
                    </span>,
                  },
                  "animated": false,
                  "animating": false,
                  "arrowPadding": 4,
                  "arrowRef": Object {
                    "current": <div
                      aria-hidden="true"
                      class="arrow"
                      style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            fill="none"
                          />
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            stroke="none"
                          />
                        </g>
                      </svg>
                    </div>,
                  },
                  "contentElement": <div
                    class="tooltip tooltipDarkMode"
                    hidden=""
                    id="id-n14qbt"
                    role="tooltip"
                    style="display: none;"
                  >
                    <div
                      aria-hidden="true"
                      class="arrow"
                      style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            fill="none"
                          />
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            stroke="none"
                          />
                        </g>
                      </svg>
                    </div>
                    View job #100
                  </div>,
                  "currentPlacement": "top",
                  "disclosureRef": Object {
                    "current": null,
                  },
                  "fixed": false,
                  "flip": true,
                  "gutter": 8,
                  "hide": [Function],
                  "mounted": false,
                  "padding": 8,
                  "placement": "top",
                  "popoverRef": Object {
                    "current": <div
                      role="presentation"
                      style="position: absolute; left: 0px; top: 0px; margin: 0px;"
                    >
                      <div
                        class="tooltip tooltipDarkMode"
                        hidden=""
                        id="id-n14qbt"
                        role="tooltip"
                        style="display: none;"
                      >
                        <div
                          aria-hidden="true"
                          class="arrow"
                          style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                        >
                          <svg
                            display="block"
                            viewBox="0 0 30 30"
                          >
                            <g
                              transform="rotate(180 15 15)"
                            >
                              <path
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                fill="none"
                              />
                              <path
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                stroke="none"
                              />
                            </g>
                          </svg>
                        </div>
                        View job #100
                      </div>
                    </div>,
                  },
                  "preventOverflow": true,
                  "render": [Function],
                  "renderCallback": undefined,
                  "sameWidth": false,
                  "setAnchorRect": [Function],
                  "setContentElement": [Function],
                  "setVisible": [Function],
                  "shift": 0,
                  "show": [Function],
                  "stopAnimation": [Function],
                  "timeout": 0,
                  "toggle": [Function],
                  "visible": false,
                }
              }
            >
              <span
                aria-labelledby="id-n14qbt"
                className="root"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                tabIndex={0}
              >
                Job #100
              </span>
            </ForwardRef(Role)>
            <ForwardRef(Role)
              className="tooltip tooltipDarkMode"
              state={
                Object {
                  "anchorRect": null,
                  "anchorRef": Object {
                    "current": <span
                      aria-labelledby="id-n14qbt"
                      class="root"
                      tabindex="0"
                    >
                      Job #100
                    </span>,
                  },
                  "animated": false,
                  "animating": false,
                  "arrowPadding": 4,
                  "arrowRef": Object {
                    "current": <div
                      aria-hidden="true"
                      class="arrow"
                      style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            fill="none"
                          />
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            stroke="none"
                          />
                        </g>
                      </svg>
                    </div>,
                  },
                  "contentElement": <div
                    class="tooltip tooltipDarkMode"
                    hidden=""
                    id="id-n14qbt"
                    role="tooltip"
                    style="display: none;"
                  >
                    <div
                      aria-hidden="true"
                      class="arrow"
                      style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            fill="none"
                          />
                          <path
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            stroke="none"
                          />
                        </g>
                      </svg>
                    </div>
                    View job #100
                  </div>,
                  "currentPlacement": "top",
                  "disclosureRef": Object {
                    "current": null,
                  },
                  "fixed": false,
                  "flip": true,
                  "gutter": 8,
                  "hide": [Function],
                  "mounted": false,
                  "padding": 8,
                  "placement": "top",
                  "popoverRef": Object {
                    "current": <div
                      role="presentation"
                      style="position: absolute; left: 0px; top: 0px; margin: 0px;"
                    >
                      <div
                        class="tooltip tooltipDarkMode"
                        hidden=""
                        id="id-n14qbt"
                        role="tooltip"
                        style="display: none;"
                      >
                        <div
                          aria-hidden="true"
                          class="arrow"
                          style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                        >
                          <svg
                            display="block"
                            viewBox="0 0 30 30"
                          >
                            <g
                              transform="rotate(180 15 15)"
                            >
                              <path
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                fill="none"
                              />
                              <path
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                stroke="none"
                              />
                            </g>
                          </svg>
                        </div>
                        View job #100
                      </div>
                    </div>,
                  },
                  "preventOverflow": true,
                  "render": [Function],
                  "renderCallback": undefined,
                  "sameWidth": false,
                  "setAnchorRect": [Function],
                  "setContentElement": [Function],
                  "setVisible": [Function],
                  "shift": 0,
                  "show": [Function],
                  "stopAnimation": [Function],
                  "timeout": 0,
                  "toggle": [Function],
                  "visible": false,
                }
              }
            >
              <Portal
                containerInfo={
                  <div
                    id="id-peql6e"
                  >
                    <div
                      role="presentation"
                      style="position: absolute; left: 0px; top: 0px; margin: 0px;"
                    >
                      <div
                        class="tooltip tooltipDarkMode"
                        hidden=""
                        id="id-n14qbt"
                        role="tooltip"
                        style="display: none;"
                      >
                        <div
                          aria-hidden="true"
                          class="arrow"
                          style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                        >
                          <svg
                            display="block"
                            viewBox="0 0 30 30"
                          >
                            <g
                              transform="rotate(180 15 15)"
                            >
                              <path
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                fill="none"
                              />
                              <path
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                stroke="none"
                              />
                            </g>
                          </svg>
                        </div>
                        View job #100
                      </div>
                    </div>
                  </div>
                }
              >
                <div
                  role="presentation"
                  style={
                    Object {
                      "position": "fixed",
                    }
                  }
                >
                  <div
                    className="tooltip tooltipDarkMode"
                    hidden={true}
                    id="id-n14qbt"
                    onAnimationEnd={[Function]}
                    onTransitionEnd={[Function]}
                    role="tooltip"
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                  >
                    <ForwardRef(Role)
                      className="arrow"
                      size={12}
                      state={
                        Object {
                          "anchorRect": null,
                          "anchorRef": Object {
                            "current": <span
                              aria-labelledby="id-n14qbt"
                              class="root"
                              tabindex="0"
                            >
                              Job #100
                            </span>,
                          },
                          "animated": false,
                          "animating": false,
                          "arrowPadding": 4,
                          "arrowRef": Object {
                            "current": <div
                              aria-hidden="true"
                              class="arrow"
                              style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                            >
                              <svg
                                display="block"
                                viewBox="0 0 30 30"
                              >
                                <g
                                  transform="rotate(180 15 15)"
                                >
                                  <path
                                    d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                    fill="none"
                                  />
                                  <path
                                    d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                    stroke="none"
                                  />
                                </g>
                              </svg>
                            </div>,
                          },
                          "contentElement": <div
                            class="tooltip tooltipDarkMode"
                            hidden=""
                            id="id-n14qbt"
                            role="tooltip"
                            style="display: none;"
                          >
                            <div
                              aria-hidden="true"
                              class="arrow"
                              style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                            >
                              <svg
                                display="block"
                                viewBox="0 0 30 30"
                              >
                                <g
                                  transform="rotate(180 15 15)"
                                >
                                  <path
                                    d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                    fill="none"
                                  />
                                  <path
                                    d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                    stroke="none"
                                  />
                                </g>
                              </svg>
                            </div>
                            View job #100
                          </div>,
                          "currentPlacement": "top",
                          "disclosureRef": Object {
                            "current": null,
                          },
                          "fixed": false,
                          "flip": true,
                          "gutter": 8,
                          "hide": [Function],
                          "mounted": false,
                          "padding": 8,
                          "placement": "top",
                          "popoverRef": Object {
                            "current": <div
                              role="presentation"
                              style="position: absolute; left: 0px; top: 0px; margin: 0px;"
                            >
                              <div
                                class="tooltip tooltipDarkMode"
                                hidden=""
                                id="id-n14qbt"
                                role="tooltip"
                                style="display: none;"
                              >
                                <div
                                  aria-hidden="true"
                                  class="arrow"
                                  style="position: absolute; font-size: 12px; width: 1em; height: 1em; pointer-events: none; fill: none; stroke: none; stroke-width: 0;"
                                >
                                  <svg
                                    display="block"
                                    viewBox="0 0 30 30"
                                  >
                                    <g
                                      transform="rotate(180 15 15)"
                                    >
                                      <path
                                        d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                        fill="none"
                                      />
                                      <path
                                        d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                        stroke="none"
                                      />
                                    </g>
                                  </svg>
                                </div>
                                View job #100
                              </div>
                            </div>,
                          },
                          "preventOverflow": true,
                          "render": [Function],
                          "renderCallback": undefined,
                          "sameWidth": false,
                          "setAnchorRect": [Function],
                          "setContentElement": [Function],
                          "setVisible": [Function],
                          "shift": 0,
                          "show": [Function],
                          "stopAnimation": [Function],
                          "timeout": 0,
                          "toggle": [Function],
                          "visible": false,
                        }
                      }
                    >
                      <div
                        aria-hidden={true}
                        className="arrow"
                        style={
                          Object {
                            "fill": "none",
                            "fontSize": 12,
                            "height": "1em",
                            "pointerEvents": "none",
                            "position": "absolute",
                            "stroke": "none",
                            "strokeWidth": 0,
                            "width": "1em",
                          }
                        }
                      >
                        <svg
                          display="block"
                          viewBox="0 0 30 30"
                        >
                          <g
                            transform="rotate(180 15 15)"
                          >
                            <path
                              d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                              fill="none"
                            />
                            <path
                              d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                              stroke="none"
                            />
                          </g>
                        </svg>
                      </div>
                    </ForwardRef(Role)>
                    View job #100
                  </div>
                </div>
              </Portal>
            </ForwardRef(Role)>
          </Tooltip>
        </div>
      </Router>
    </MemoryRouter>
  </Component>
  <IconSprite
    height="16"
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
    width="16"
  >
    <svg
      height="16"
      style={
        Object {
          "height": 0,
          "position": "absolute",
          "width": 0,
        }
      }
      width="16"
    >
      <symbol
        className="feather feather-arrow-down"
        fill="none"
        id="arrow"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 5v14M19 12l-7 7-7-7"
        />
      </symbol>
      <symbol
        className="feather feather-arrow-right-circle"
        fill="none"
        id="arrow-right-circle"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16l4-4-4-4M8 12h8"
        />
      </symbol>
      <symbol
        className="feather feather-x-circle"
        fill="none"
        id="cancel"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M15 9l-6 6M9 9l6 6"
        />
      </symbol>
      <symbol
        className="feather feather-clock"
        fill="none"
        id="clock"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 6v6l4 2"
        />
      </symbol>
      <symbol
        className="feather feather-x-circle"
        fill="none"
        id="close"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M15 9l-6 6M9 9l6 6"
        />
      </symbol>
      <symbol
        className="feather feather-git-commit"
        fill="none"
        id="commit"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="4"
        />
        <path
          d="M1.05 12H7M17.01 12h5.95"
        />
      </symbol>
      <symbol
        className="feather feather-bar-chart"
        fill="none"
        id="filter"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 20V10M18 20V4M6 20v-4"
        />
      </symbol>
      <symbol
        className="feather feather-help-circle"
        fill="none"
        id="help"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3M12 17h.01"
        />
      </symbol>
      <symbol
        className="feather feather-menu"
        fill="none"
        id="menu"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12h18M3 6h18M3 18h18"
        />
      </symbol>
      <symbol
        fill="currentColor"
        id="sort"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 18h6v-2H3v2zM3 6v2h18V6H3zm0 7h12v-2H3v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </symbol>
      <symbol
        className="feather feather-alert-triangle"
        fill="none"
        id="warning"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 001.71 3h16.94a2 2 0 001.71-3L13.71 3.86a2 2 0 00-3.42 0zM12 9v4M12 17h.01"
        />
      </symbol>
    </svg>
  </IconSprite>
</div>
`;
